@@ -1,10 +1,10 @@
-#ifndef CYGONCE_DEVS_ETH_PHY_H_
-#define CYGONCE_DEVS_ETH_PHY_H_
+#ifndef CYGONCE_DEVS_ETH_PHY_DEV_H_
+#define CYGONCE_DEVS_ETH_PHY_DEV_H_
 //==========================================================================
 //
-//      eth_phy.h
+//      eth_phy_dev.h
 //
-//      User API for ethernet transciever (PHY) support
+//      Device API for ethernet transciever (PHY) support
 //
 //==========================================================================
 //####ECOSGPLCOPYRIGHTBEGIN####
@@ -52,50 +52,40 @@
 //
 //==========================================================================
 
-#define PHY_BIT_LEVEL_ACCESS_TYPE 0
-#define PHY_REG_LEVEL_ACCESS_TYPE 1
+// Transceiver mode
+#define PHY_BMCR             0x00    // Register number
+#define PHY_BMCR_RESET       0x8000
+#define PHY_BMCR_LOOPBACK    0x4000
+#define PHY_BMCR_100MB       0x2000
+#define PHY_BMCR_AUTO_NEG    0x1000
+#define PHY_BMCR_POWER_DOWN  0x0800
+#define PHY_BMCR_ISOLATE     0x0400
+#define PHY_BMCR_RESTART     0x0200
+#define PHY_BMCR_FULL_DUPLEX 0x0100
+#define PHY_BMCR_COLL_TEST   0x0080
 
-// Physical device access - defined by hardware instance
-typedef struct {
-    int ops_type;  // 0 => bit level, 1 => register level
-    bool init_done;
-    void (*init)(void);
-    void (*reset)(void);
-    union {
-        struct {
-            void (*set_data)(int);
-            int  (*get_data)(void);
-            void (*set_clock)(int);
-            void (*set_dir)(int);
-        } bit_level_ops;
-        struct {
-            void (*put_reg)(int reg, int unit, unsigned short data);
-            bool (*get_reg)(int reg, int unit, unsigned short *data);
-        } reg_level_ops;
-    } ops;
-    int phy_addr;
-    struct _eth_phy_dev_entry *dev;  // Chip access functions
-} eth_phy_access_t;
+#define PHY_BMSR             0x01    // Status register
+#define PHY_BMSR_100T4       0x8000
+#define PHY_BMSR_100FDX      0x4000
+#define PHY_BMSR_100HDX      0x2000
+#define PHY_BMSR_10FDX       0x1000
+#define PHY_BMSR_10HDX       0x0800
+#define PHY_BMSR_AUTO_NEG    0x0020  
+#define PHY_BMSR_LINK        0x0004
 
-#define ETH_PHY_BIT_LEVEL_ACCESS_FUNS(_l,_init,_reset,_set_data,_get_data,_set_clock,_set_dir) \
-static eth_phy_access_t _l = {PHY_BIT_LEVEL_ACCESS_TYPE, false, _init, _reset, \
-                              {.bit_level_ops = {_set_data, _get_data, _set_clock, _set_dir}}}
+#define PHY_ID1              0x02    // Chip ID register (high 16 bits)
+#define PHY_ID2              0x03    // Chip ID register (low 16 bits)
 
-#define ETH_PHY_REG_LEVEL_ACCESS_FUNS(_l,_init,_reset,_put_reg,_get_reg) \
-static eth_phy_access_t _l = {PHY_REG_LEVEL_ACCESS_TYPE, false, _init, _reset, \
-                              {.reg_level_ops = {_put_reg, _get_reg}}}
+struct _eth_phy_dev_entry {
+    char          *name;
+    unsigned long  id;
+    bool         (*stat)(eth_phy_access_t *f, int *stat);
+} CYG_HAL_TABLE_TYPE;
 
-#define ETH_PHY_STAT_LINK  0x0001   // Link up/down
-#define ETH_PHY_STAT_100MB 0x0002   // Connection is 100Mb
-#define ETH_PHY_STAT_FDX   0x0004   // Connection is full duplex
+#define _eth_phy_dev(_name_,_id_,_stat_)                \
+struct _eth_phy_dev_entry _eth_phy_dev_##_id_           \
+   CYG_HAL_TABLE_QUALIFIED_ENTRY(_eth_phy_devs,_id_) =  \
+     { _name_, _id_, _stat_ }; 
 
-externC bool _eth_phy_init(eth_phy_access_t *f);
-externC void _eth_phy_reset(eth_phy_access_t *f);
-externC int  _eth_phy_state(eth_phy_access_t *f);
-externC int  _eth_phy_cfg(eth_phy_access_t *f, int mode);
-// Internal routines
-externC void _eth_phy_write(eth_phy_access_t *f, int reg, int unit, unsigned short data);
-externC bool _eth_phy_read(eth_phy_access_t *f, int reg, int unit, unsigned short *val);
-
-#endif  // CYGONCE_DEVS_ETH_PHY_H_
+#endif  // CYGONCE_DEVS_ETH_PHY_DEV_H_
 // ------------------------------------------------------------------------
